--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>{% block title %} {% endblock %} </title>
 </head>
 <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/contact-us/">Contact</a>
+    <a href="{% url 'shop_app:home' %}">Home</a>
+    <a href="{% url 'shop_app:about' %}">About</a>
+    <a href="{% url 'shop_app:contact' %}">Contact</a>
+    <a href="{% url 'shop_app:all_products' %}">All products</a>
     
     {% block content %}
     {% endblock %}
