--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -16,7 +16,7 @@
             <h4>{{product.title}} (Viewd {{product.view_count}} times)</h4>
             <h5>Category: {{product.category}}</h5>
             <h5>Price: <strike>Rs. {{product.marked_price}} </strike> Rs. {{product.selling_price}}</h5>
-            <a href="" class="btn btn-primary">Add to cart</a>
+            <a href="{% url 'shop_app:add_to_cart' product.id %}" class="btn btn-primary">Add to cart</a>
             <p class="text-info" >Warranty: {{product.warranty}}</p>
             <p class="text-info" >Return Policy: {{product.return_policy}}</p>
             <hr>
