--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %} My cart{% endblock %}
+{% block title %}Checkout {% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
-            <h4>Items in my cart</h4><hr>
+        <div class="col-md-6">
+            <h3>Items in the cart</h3>
+            <a href="{% url 'shop_app:my_cart' %}">Update Cart</a>
             <table class="table">
                 <thead>
                     <tr>
@@ -15,7 +16,6 @@
                         <th>Rate</th>
                         <th>Quantity</th>
                         <th>Subtotal</th>
-                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -26,28 +26,22 @@
                         <td>{{cp.rate}}</td>
                         <td>{{cp.quantity}}</td>
                         <td>{{cp.subtotal}}</td>
-                        <td>
-                            <a href="{% url 'shop_app:manage_cart' cp.id %}?action=inc" class="btn btn-primary"> + </a>
-                            <a href="{% url 'shop_app:manage_cart' cp.id %}?action=dcr" class="btn btn-warning"> - </a>
-                            <a href="{% url 'shop_app:manage_cart' cp.id %}?action=rmv" class="btn btn-danger"> x </a>
-                        </td>
                     </tr>
                     {% endfor %}
                     <tr>
                         <th colspan="4" class="text-right">Total</th>
                         <th>Rs. {{cart.total}}</th>
-                        {% if cart.cartproduct_set.all %}
-                        <th><a href="{% url 'shop_app:empty_cart'%}">Empty cart</a></th>
-                        {% endif %}
                     </tr>
-                    {% if cart.cartproduct_set.all %}
-                    <tr>
-                        <th><a class="btn btn-info" href="{% url 'shop_app:checkout' %}"> Checkout </a></th>
-                    </tr>
-                    {% endif %}
-
                 </tbody>
             </table>
+        </div>
+        <div class="col-md-6">
+            <h3>Checkout Form</h3>
+            <form action="" method="POST">
+                {% csrf_token %}
+                {{form.as_p}}
+                <button class="btn btn-info">Place order</button>
+            </form>
         </div>
     </div>
 </div>
