Login Required to Checkout in Django Ecommerce

--- a/templates/customer_login.html
+++ b/templates/customer_login.html
@@ -22,7 +22,7 @@
                 {% endif %}
             </form>
             <p>Forgot Password?<a href="">Reset now.</a></p>
-            <p> or dont have account? <a href="">Register here</a></p>
+            <p> or dont have account? <a href="{% url 'shop_app:customer_registration' %}{% if request.GET.next %}?next={{request.GET.next}}{%endif%}">Register here</a></p>
         </div>
     </div>
 </div>
