--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 
         {% if  request.user.customer %}
         Welcome {{ request.user.username}}
+        <a href="{% url 'shop_app:customer_profile' %}">My Profile</a> |
         <a href="{% url 'shop_app:customer_logout' %}">Logout</a> |
         {% else %}
             <a href="{% url 'shop_app:customer_registration' %}">Register</a> |
